made mobile nav height 100vh, still trying to fix phone bug where nav is visible after pulling screen all the way up or down..

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -175,15 +175,12 @@ ul#mobileNav {
 	background-color: #384047;
 	position: fixed;
 	width: 45%;
+	overflow-y: scroll;
 	right: 0px;
 	top: 0;
-	height: 100%;
+	height: 100vh;
 	padding: 2px 10px;
 	display: none;
-}
-
-ul#mobileNav li {
-	display: block;
 }
 
 ul#mobileNav li a {
